--- a/React/src/App.scss
+++ b/React/src/App.scss
@@ -1,9 +1,8 @@
-// partials
-@use "./scss/partials/brand-variables" as bv;
-@use "./scss/partials/queries" as q;
+#root {
+  background-color: #f0f0f0;
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 }
